--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="dist/min/css/bootstrap.min.css" rel="stylesheet" />
     <link href="dist/min/css/richcc.min.css" rel="stylesheet" />
-    <link href="resource/bootstrap-master/bootstrap-master/src/datepicker/datepicker.css" rel="stylesheet" />
     <script type="text/javascript" src="lib/jquery.min.js"></script>
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="lib/angular-animate.min.js"></script>
     <script src="lib/ui-bootstrap-tpls-1.1.1.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap.min.js"></script>
-    <script src="resource/datepicker/richcc.js"></script>
+    <script type="text/javascript" src="lib/bootstrap.min.js"></script>   
+    <<!--script src="resource/richcc.js"></script>
+    <script src="resource/richcc-templates.js"></script>--> 
+    <script src="dist/min/js/richcc.min.js"></script>
     <script src="dist/js/app.js"></script>
     <style>
         .full button span {
