--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -39,18 +39,18 @@
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:600px;">
-                        <richcc-datepicker datepicker-mode="'day'" ng-model="sample.dt" year-map-heat="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm" ></richcc-datepicker>
+                        <richcc-datepicker datepicker-mode="'day'" ng-model="sample.dt" year-map-heat="true" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" show-weeks="false" class="well well-sm" event-popup-left-callback="sample.leftCallback(data)" ></richcc-datepicker>
                     </div>
                 </div>
                 <div class="col-xs-4" style="padding:0;">
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-hide="true" prevent-cal-nav="true" show-weeks="false" class="well well-sm"></richcc-datepicker>
+                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden" prevent-cal-nav="true" show-weeks="false" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                     <div class="col-xs-12" style="padding:0;">
                         <div class="" style="display:inline-block;width:300px;height:300px">
-                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" show-weeks="false" class="well well-sm"></richcc-datepicker>
+                            <richcc-datepicker ng-model="sample.dt" light="true" events="sample.sampleEvents" event-popup-settings="sample.popupSettingsHidden"  show-weeks="false" class="well well-sm"></richcc-datepicker>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
         <div style="display:block; height:600px;width:1367px;margin:30px auto;">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:600px;">
-                    <richcc-datepicker datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="false" events="sample.sampleEvents" show-weeks="false" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
+                    <richcc-datepicker datepicker-mode="'month'" ng-model="sample.dt" year-map-heat="false" event-popup-settings="sample.popupSettings" events="sample.sampleEvents" show-weeks="false" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
                 </div>
             </div>
         </div>
