--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -71,7 +71,7 @@
                         ng-init="columnindex = $index"
                         ng-click="richccDaySelected(dt, eventDetails[dt.key])"
                         uib-popover-template="'template/richcc/richccDayPopup.html'"
-                        popover-trigger="{{eventDetails[dt.key].length > 0 && eventPopupHide != true ? 'outsideClick' : 'none'}}"
+                        popover-trigger="{{eventDetails[dt.key].length > 0 && eventPopupSettings.hidden != true ? 'outsideClick' : 'none'}}"
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForDayMap(rowindex, columnindex)}}"
                         popover-class="richcc-popup-container">
@@ -136,7 +136,7 @@
                                  ng-init="popitem = column;"
                                  uib-popover-template="'template/richcc/richccMonthPopup.html'"
                                  ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
-                                 popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 && eventPopupHide != true && column.monthIndex == monthIndex ? 'outsideClick' : 'none'}}"
+                                 popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 &&  eventPopupSettings.hidden != true && column.monthIndex == monthIndex ? 'outsideClick' : 'none'}}"
                                  popover-append-to-body="true"
                                  popover-placement="{{getPopUpPositionForMonthEventMap(monthIndex, weekindex)}}"
                                  popover-class="richcc-popup-container">
@@ -216,7 +216,7 @@
                         ng-attr-len="{{parent.monthWiseEventDetails[monthIndex][mdt.key].length}}"
                         ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
                         uib-popover-template="'template/richcc/richccMonthPopup.html'"
-                        popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 && eventPopupHide != true ? 'outsideClick' : 'none'}}"
+                        popover-trigger="{{parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 &&  eventPopupSettings.hidden != true ? 'outsideClick' : 'none'}}"
                         popover-append-to-body="true"
                         popover-placement="{{getPopUpPositionForMonthHeatMap(monthIndex)}}"
                         popover-class="richcc-popup-container">
@@ -337,9 +337,9 @@
                     </div>
                 </div>
             </div>
-            <div class="event-action-container">
-                <button class="event-action" ng-click="popUpLeftHandler(dt, eventDetails[dt.key])">Add Events</button>
-                <button class="event-action" ng-click="popUpRightHandler(dt, eventDetails[dt.key])">Edit Events</button>
+            <div class="event-action-container" ng-class="{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}">
+                <button class="event-action" ng-if="eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.leftLabel || 'Add Events'}}</button>
+                <button class="event-action" ng-if="eventPopupSettings.showRight != false" ng-click="popUpRightHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.rightLabel || 'Edit Events'}}</button>
                 <div class="event-separator"></div>
             </div>
         </div>
@@ -361,9 +361,9 @@
                     </div>
                 </div>
             </div>
-            <div class="event-action-container">
-                <button class="event-action" ng-click="popUpLeftHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">Add Events</button>
-                <button class="event-action" ng-click="popUpRightHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">Edit Events</button>
+            <div class="event-action-container" ng-class="{'singleButtonOnly' : (parent.eventPopupSettings.showLeft != false && parent.eventPopupSettings.showRight == false) || (parent.eventPopupSettings.showLeft == false && parent.eventPopupSettings.showRight != false)}">
+                <button class="event-action" ng-if="parent.eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">{{parent.eventPopupSettings.leftLabel || 'Add Events'}}</button>
+                <button class="event-action" ng-if="parent.eventPopupSettings.showRight != false" ng-click="popUpRightHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">{{parent.eventPopupSettings.rightLabel || 'Edit Events'}}</button>
                 <div class="event-separator"></div>
             </div>
         </div>
