--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -39,9 +39,10 @@
 </head>
 <body ng-controller="richCCController as sample" style="background:#f0f0f0;">
     <button ng-click="sample.insertSampleEvent()">Insert Sample</button>
+    <button ng-click="sample.showMode = !sample.showMode">Toggle Mode</button>
     <pre class="col-xs-12" style="line-height:46px;padding:0 15px;margin:0;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
     <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
-        <!--<div style="display:block; height:630px;width:1367px;margin:30px auto;">
+        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="sample.showMode || true">
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
@@ -61,8 +62,8 @@
                     </div>
                 </div>
             </div>
-        </div>-->
-        <div style="display:block; height:630px;width:1367px;margin:30px auto;">
+        </div>
+        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="!sample.showMode || true">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:630px;">
                     <richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)"></richcc-datepicker>
