--- a/Source.RichCC/Source.RichCC/default.html
+++ b/Source.RichCC/Source.RichCC/default.html
@@ -41,7 +41,7 @@
     <button ng-click="sample.showMode = !sample.showMode">Toggle Mode</button>
     <pre class="col-xs-12" style="line-height:46px;padding:0 15px;margin:0;">Current date is: <em>{{sample.dt | date:'fullDate' }}</em></pre>
     <div style="width:100%;height:calc(100vh - 96px);padding:0 30px;overflow:auto;margin:0;" class="col-xs-12">
-        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="sample.showMode || true">
+        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="sample.showMode">
             <div class="col-xs-12">
                 <div class="col-xs-8">
                     <div class="" style="display:inline-block;width:800px;height:630px;">
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="!sample.showMode || true">
+        <div style="display:block; height:630px;width:1367px;margin:30px auto;" ng-if="!sample.showMode">
             <div class="col-xs-12">
                 <div class="col-xs-12" style="display:inline-block;width:100%;height:630px;">
                     <richcc-datepicker datepicker-options="sample.dtPickerOptionsMonth" ng-model="sample.dt" event-popup-settings="sample.popupSettings2" events="sample.sampleEvents" class="well well-sm" day-select-callback="sample.daySelected(data)" event-popup-left-callback="sample.leftCallback(data)" event-popup-right-callback="sample.rightCallback(data)" event-click-callback="sample.eventClickCallback(data)"></richcc-datepicker>
