--- a/Source.RichCC/Source.RichCC/resource/richcc-templates.html
+++ b/Source.RichCC/Source.RichCC/resource/richcc-templates.html
@@ -98,7 +98,7 @@
                                  ng-style="{'color': event.color, 'width': light != true ?  'calc(' + 100 * event.paintBoxLength + '% - 8px)' : 'calc(' + 100 * event.paintBoxLength + '% - 20px)'}"
                                  ng-repeat="event in eventDetails[dt.key] track by $index"
                                  ng-if="event.startPaint == true"
-                                 style="color:#fff;">
+                                 style="color:#fff;" >
                                 <div class="mark-text-initial" ng-if="light == true" ng-style="{'color': event.bgcolor}">{{event.initial | limitTo: 1}}</div>
                                 <div class="mark-stripe" ng-style="{'border-color': light == false && event.highlightBorder == true ? event.highlightBorderColor : 'transparent'}" ng-class="{'highlightBorder': light == false ? event.highlightBorder : ''}">
                                     <div class="mark-stripe-color" ng-style="{'background-color': event.bgcolor}">
@@ -140,14 +140,14 @@
                         <div class="richcc-month-eventbox" ng-repeat="column in row track by $index" ng-if="(weekindex != 5) || (weekindex == 5 && $index < 3)">
                             <div class="richcc-eventbox-content {{column.customClass}}"
                                  ng-class="{'notInPresentMonth' : column.monthIndex != monthIndex, 'showingDates': parent.eventPopupSettings.showDateInYearView == true}"
-                                 ng-init="popitem = column;mEvents = parent.monthWiseEventDetails[monthIndex][popitem.key]"                                 
+                                 ng-init="popitem = column;mEvents = parent.monthWiseEventDetails[monthIndex][popitem.key]"
                                  uib-popover-template="monthPopUpTmpl"
                                  ng-click="richccDaySelected(column, parent.monthWiseEventDetails[monthIndex][popitem.key])"
                                  popover-trigger="{{popUpTriggerYearView(mEvents)}}"
                                  popover-append-to-body="true"
                                  popover-placement="{{getPopUpPositionForMonthEventMap(monthIndex, weekindex)}}"
-                                 popover-class="richcc-popup-container">                                
-                                <div class="markHolder" style="position:relative;" ng-show="parent.monthWiseEventDetails[monthIndex][column.key].length > 0" >
+                                 popover-class="richcc-popup-container">
+                                <div class="markHolder" style="position:relative;" ng-show="parent.monthWiseEventDetails[monthIndex][column.key].length > 0">
                                     <div class="month-date" ng-show="column.monthIndex == monthIndex && parent.eventPopupSettings.showDateInYearView == true">{{popitem.date | date:'dd'}}</div>
                                     <div class="mark step-{{event.step}}"
                                          ng-show="parent.monthWiseEventDetails[monthIndex][column.key].length > 0"
@@ -161,7 +161,7 @@
                                             <div class="mark-stripe-color" ng-style="{'background-color': event.bgcolor}"></div>
                                         </div>
                                     </div>
-                                </div>                                
+                                </div>
                             </div>
                         </div>
                     </td>
@@ -335,20 +335,20 @@
     <div id="richccTmplDayPopup">
         <div class="richcc-day-popup">
             <div class="event-container" ng-class="{'noActions': !(eventPopupSettings.showLeft || eventPopupSettings.showRight)}">
-                <div class="event-container-label">{{dt.date | date:'dd MMM, yyyy'}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
+                <div class="event-container-label">{{dt.date | date:eventPopupSettings.dateFilter}} <span ng-show="eventDetails[dt.key].length > 0 ">({{eventDetails[dt.key].length}} Events)</span></div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in eventDetails[dt.key] track by $index" ng-click="popUpEventClickHandler(dt, event)">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}">
                             <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
                             <div class="event-timing-holder">
-                                <span class="event-time">{{event.startDt | date:'MM/dd/yy'}} 9.00</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event.endDt | date:'MM/dd/yy'}} 9.00</span>
+                                <span class="event-time">{{event._startDt | date:eventPopupSettings.dateFilter}}</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event._endDt | date: eventPopupSettings.dateFilter}}</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="event-action-container" 
+            <div class="event-action-container"
                  ng-class="{'singleButtonOnly' : (eventPopupSettings.showLeft != false && eventPopupSettings.showRight == false) || (eventPopupSettings.showLeft == false && eventPopupSettings.showRight != false)}"
                  ng-show="eventPopupSettings.showLeft || eventPopupSettings.showRight">
                 <button class="event-action" ng-if="eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(dt, eventDetails[dt.key])">{{eventPopupSettings.leftLabel || 'Add Events'}}</button>
@@ -361,20 +361,20 @@
     <div id="richccTmplRichccMonthPopup">
         <div class="richcc-day-popup">
             <div class="event-container" ng-class="{'noActions': !(parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight)}">
-                <div class="event-container-label">{{popitem.date | date:'dd MMM, yyyy'}} <span ng-show="parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 ">({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</span></div>
+                <div class="event-container-label">{{popitem.date | date: parent.eventPopupSettings.dateFilter}} <span ng-show="parent.monthWiseEventDetails[monthIndex][popitem.key].length > 0 ">({{parent.monthWiseEventDetails[monthIndex][popitem.key].length}} Events)</span></div>
                 <div class="event-details-container">
                     <div class="event-detail" ng-repeat="event in parent.monthWiseEventDetails[monthIndex][popitem.key] track by $index" ng-click="popUpEventClickHandler(popitem, event)">
                         <div class="event-marker"></div>
                         <div class="event-title-holder" ng-style="{'border-left-color': event.bgcolor}">
                             <span class="event-title">{{event.name}}</span> : <span class="event-subject">{{event.subject}}</span>
                             <div class="event-timing-holder">
-                                <span class="event-time">{{event.startDt | date:'MM/dd/yy'}} 9.00</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event.endDt | date:'MM/dd/yy'}} 9.00</span>
+                                <span class="event-time">{{event._startDt | date: parent.eventPopupSettings.dateFilter}}</span><span style="padding: 0 15px;">-</span><span class="event-time">{{event._endDt | date: parent.eventPopupSettings.dateFilter}}</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="event-action-container" 
+            <div class="event-action-container"
                  ng-class="{'singleButtonOnly' : (parent.eventPopupSettings.showLeft != false && parent.eventPopupSettings.showRight == false) || (parent.eventPopupSettings.showLeft == false && parent.eventPopupSettings.showRight != false)}"
                  ng-show="parent.eventPopupSettings.showLeft || parent.eventPopupSettings.showRight">
                 <button class="event-action" ng-if="parent.eventPopupSettings.showLeft != false" ng-click="popUpLeftHandler(popitem, parent.monthWiseEventDetails[monthIndex][popitem.key])">{{parent.eventPopupSettings.leftLabel || 'Add Events'}}</button>
